[gd_scene load_steps=18 format=3 uid="uid://bmfsmfgx5gmb8"]

[ext_resource type="Script" uid="uid://btadpl6swnvir" path="res://scripts/dayOne/DayOneBalcony.gd" id="1_bcpmc"]
[ext_resource type="Texture2D" uid="uid://u06hiofvr4cj" path="res://assets/misc/balcony_sprite.png" id="2_3uhcd"]
[ext_resource type="PackedScene" uid="uid://cpuj6ktdfqhdu" path="res://scenes/change_room.tscn" id="3_7bqqh"]
[ext_resource type="PackedScene" uid="uid://c8wffxipu48vg" path="res://scenes/player.tscn" id="4_nu7lu"]
[ext_resource type="Texture2D" uid="uid://bm0b03u6il0ke" path="res://assets/misc/spotlight.png" id="5_4cvig"]
[ext_resource type="PackedScene" uid="uid://d24rahutnton5" path="res://scenes/DialogueArea.tscn" id="6_unaxg"]
[ext_resource type="Script" uid="uid://divt8ny53jpna" path="res://scripts/DialogueExportResource.gd" id="7_w26tj"]
[ext_resource type="Script" uid="uid://c7hf8sppb4268" path="res://scripts/DialogueTextResource.gd" id="8_lk1py"]
[ext_resource type="AudioStream" uid="uid://dy3b7ol61unl7" path="res://assets/sfx/ian_voice.wav" id="9_kjvl4"]
[ext_resource type="AudioStream" uid="uid://dy15a5truwsky" path="res://assets/sfx/night_ambience.mp3" id="10_uoerg"]
[ext_resource type="Texture2D" uid="uid://d3t7e3b5dulg7" path="res://assets/misc/crack_1.png" id="11_5iclc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5c6u"]
size = Vector2(20, 7)

[sub_resource type="Resource" id="Resource_jvlks"]
script = ExtResource("8_lk1py")
text = "*the view is beautiful today"
text_speed = 12.0
text_sound = ExtResource("9_kjvl4")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b7uxb"]
size = Vector2(13, 62)

[sub_resource type="Resource" id="Resource_68ty5"]
script = ExtResource("8_lk1py")
text = "*i can't see anything.."
text_speed = 12.0
text_sound = ExtResource("9_kjvl4")
text_volume_pitch_min = 0.75
text_volume_pitch_max = 0.7
metadata/_custom_type_script = "uid://c7hf8sppb4268"

[sub_resource type="Gradient" id="Gradient_1v70g"]
offsets = PackedFloat32Array(0, 0.6710098)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_68ty5"]
gradient = SubResource("Gradient_1v70g")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="D2Balcony" type="Node2D"]
script = ExtResource("1_bcpmc")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, 43)

[node name="Balcony" type="Sprite2D" parent="."]
position = Vector2(24, 40)
texture = ExtResource("2_3uhcd")

[node name="Crack1" type="Sprite2D" parent="."]
position = Vector2(10, 18)
texture = ExtResource("11_5iclc")
flip_h = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(0, 20, 0, 0, 15, 0, 15, 11, 38, 11, 38, 72, 35, 72, 15, 72, 15, 75, 0, 75, 0, 53, 6, 53, 6, 69, 34, 69, 34, 19, 6, 19, 6, 37, 0, 37)

[node name="toBedroom" parent="." instance=ExtResource("3_7bqqh")]
position = Vector2(-1, 45)
rotation = -1.5707964
wanted_room_path = "res://scenes/Days/DayTwo/d2_bedroom.tscn"
wanted_player_pos = Vector2(75, 24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="toBedroom"]
shape = SubResource("RectangleShape2D_h5c6u")

[node name="Player" parent="." instance=ExtResource("4_nu7lu")]
position = Vector2(14, 46)
speed = 50.0

[node name="Camera2D" parent="Player" index="3"]
limit_left = 0

[node name="sun" type="PointLight2D" parent="."]
position = Vector2(62.000004, 42)
scale = Vector2(1.7688439, 1.8100625)
color = Color(0.93909687, 0.94756943, 0.9663058, 1)
energy = 1.28
shadow_enabled = true
texture = ExtResource("5_4cvig")

[node name="DialogueArea" parent="." instance=ExtResource("6_unaxg")]
position = Vector2(37, 43)
dialogue = Array[ExtResource("7_w26tj")]([SubResource("Resource_jvlks")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueArea"]
position = Vector2(4.5, -1)
shape = SubResource("RectangleShape2D_b7uxb")

[node name="DarkDialogue" parent="." instance=ExtResource("6_unaxg")]
position = Vector2(37, 43)
dialogue = Array[ExtResource("7_w26tj")]([SubResource("Resource_68ty5")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="DarkDialogue"]
position = Vector2(4.5, -1)
shape = SubResource("RectangleShape2D_b7uxb")
disabled = true

[node name="ambience" type="CanvasModulate" parent="."]
color = Color(0.9092348, 0.9117436, 0.8771378, 1)

[node name="Spotlight" type="Sprite2D" parent="."]
modulate = Color(0.93333334, 0.9764706, 0.93333334, 0.6666667)
light_mask = 0
position = Vector2(596, 61)
scale = Vector2(16.035156, 15.46875)
texture = SubResource("GradientTexture2D_68ty5")

[node name="night_ambience" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_uoerg")
volume_db = 10.0
parameters/looping = true

[editable path="Player"]
